--- a/src/content/become-partner/en.mdx
+++ b/src/content/become-partner/en.mdx
@@ -1,11 +1,11 @@
 export const metadata = {
-  title: 'Become a Partner | Grow Your Practice | Eleva Care',
+  title: 'For Organizations | Eleva Care Technology for Your Business',
   description:
-    "Partner with Eleva Care to expand your women's health practice. Access our technology platform, grow your expert network, and reach more clients while maintaining your independent brand.",
+    "Power your women's health services with Eleva Care technology. Clinics, employers, and healthcare organizations use our platform to deliver digital care, access our expert network, and scale their services.",
   og: {
-    title: 'Become a Partner | Grow Your Practice | Eleva Care',
+    title: 'For Organizations | Eleva Care Technology for Your Business',
     description:
-      "Partner with Eleva Care to expand your women's health practice and reach more clients.",
+      "Power your women's health services with Eleva Care platform technology. For clinics, employers, and healthcare organizations.",
     siteName: 'Eleva Care',
   },
 };
@@ -24,14 +24,14 @@ import WhoCanJoinSection from '@/components/sections/become-partner/WhoCanJoinSe
 
 <HeroSection
   badge={{
-    text: 'For Healthcare Businesses',
+    text: 'For Clinics, Employers & Organizations',
     icon: <Sparkles className="mr-2 inline h-4 w-4" />,
   }}
-  title="Scale Your Practice with"
+  title="Power Your Services with"
   subtitle="Eleva Care Technology"
-  description="Join our partner network to expand your women's health services. Access cutting-edge platform technology, grow your expert team, and reach more clients while maintaining your independent brand identity."
+  description="Use Eleva Care's platform technology to deliver digital women's health services through your organization. Access our network of independent experts, or onboard your own team—all powered by our secure, proven infrastructure."
   cta={{
-    text: 'Become a Partner',
+    text: 'Partner with Us',
     href: '/contact?partner=true',
     icon: <ArrowRight className="ml-2 h-5 w-5" />,
   }}
@@ -39,54 +39,54 @@ import WhoCanJoinSection from '@/components/sections/become-partner/WhoCanJoinSe
     text: 'Schedule a Demo',
     href: '/contact?demo=true',
   }}
-  features="Trusted by wellness centers, health practices, and coaching organizations across the women's health sector."
+  features="Trusted by clinics, wellness centers, employers, and healthcare organizations to power their digital women's health services."
 />
 
 <BenefitsSection
-  title="Why Partner with Eleva Care?"
+  title="Why Organizations Choose Eleva Care"
   benefits={[
     {
-      icon: 'building',
-      title: 'Expand Your Reach',
+      icon: 'zap',
+      title: 'Ready-to-Use Technology',
       description:
-        "Access a growing network of clients actively seeking women's health services. Increase visibility and bookings for your practice.",
+        'Skip the build phase. Our proven platform includes scheduling, secure video consultations, payments, and client management—ready for your organization.',
     },
     {
       icon: 'users',
-      title: 'Build Your Expert Team',
+      title: 'Access Our Expert Network',
       description:
-        'Attract and onboard qualified healthcare professionals. Manage your team seamlessly through our platform.',
+        'Offer your clients access to our network of independent, licensed healthcare professionals, or onboard your own team to the platform.',
     },
     {
-      icon: 'zap',
-      title: 'Technology Platform',
+      icon: 'building',
+      title: 'Keep Your Brand',
       description:
-        'Complete practice management tools: scheduling, video consultations, payments, and client communications—all in one place.',
+        'White-label options let you offer Eleva Care-powered services under your organization's brand. Your clients, your relationships.',
     },
     {
       icon: 'dollar',
-      title: 'Revenue Growth',
+      title: 'Flexible Business Model',
       description:
-        'Transparent revenue model with workspace subscriptions and fair commission structure. Keep your brand identity and client relationships.',
+        'Workspace subscriptions with transparent pricing. Scale up or down based on your organization's needs.',
     },
     {
       icon: 'chart',
-      title: 'Analytics & Insights',
+      title: 'Enterprise Analytics',
       description:
-        'Track performance, bookings, and revenue with comprehensive dashboards. Make data-driven decisions for your practice.',
+        'Track utilization, outcomes, and ROI with comprehensive dashboards. Make data-driven decisions for your health programs.',
     },
     {
       icon: 'headphones',
-      title: 'Dedicated Support',
+      title: 'Dedicated Partner Support',
       description:
-        'Onboarding assistance, technical support, and ongoing partnership management to ensure your success.',
+        'Onboarding assistance, technical support, and a dedicated account manager to ensure your success.',
     },
   ]}
 />
 
 <WhoCanJoinSection
-  title="Who Can Become a Partner?"
-  subtitle="Eleva Care welcomes all types of women's health organizations committed to quality care and our shared mission."
+  title="Who Uses Eleva Care for Organizations?"
+  subtitle="Clinics, employers, and healthcare organizations use our platform technology to power their women's health services."
   partnerTypes={[
     {
       icon: 'stethoscope',
@@ -254,16 +254,16 @@ import WhoCanJoinSection from '@/components/sections/become-partner/WhoCanJoinSe
 />
 
 <FinalCTASection
-  title="Ready to Grow Your Practice?"
-  description="Join Eleva Care's partner network and become part of a movement to transform women's healthcare. Together, we'll help more women access the quality care they deserve."
+  title="Ready to Power Your Organization with Eleva Care?"
+  description="Join the organizations already using Eleva Care technology to deliver digital women's health services. Our platform, your brand, better outcomes for your clients."
   cta={{
-    text: 'Apply to Become a Partner',
+    text: 'Get Started',
     href: '/contact?partner=true',
     icon: <ArrowRight className="ml-2 h-5 w-5" />,
   }}
   support={{
-    text: 'Have questions about partnership?',
-    linkText: 'Schedule a call with our team.',
+    text: 'Want to see how it works?',
+    linkText: 'Schedule a demo with our team.',
     linkHref: '/contact?demo=true',
   }}
 />
