--- a/src/content/become-partner/es.mdx
+++ b/src/content/become-partner/es.mdx
@@ -1,11 +1,11 @@
 export const metadata = {
-  title: 'Conviértete en Partner | Haz Crecer Tu Práctica | Eleva Care',
+  title: 'Para Organizaciones | Tecnología Eleva Care para tu Empresa',
   description:
-    'Asóciate con Eleva Care para expandir tu práctica de salud femenina. Accede a nuestra plataforma tecnológica, amplía tu red de expertas y alcanza más clientas manteniendo tu marca independiente.',
+    'Potencia tus servicios de salud femenina con la tecnología Eleva Care. Clínicas, empresas y organizaciones sanitarias usan nuestra plataforma para ofrecer atención digital, acceder a nuestra red de especialistas y escalar sus servicios.',
   og: {
-    title: 'Conviértete en Partner | Haz Crecer Tu Práctica | Eleva Care',
+    title: 'Para Organizaciones | Tecnología Eleva Care para tu Empresa',
     description:
-      'Asóciate con Eleva Care para expandir tu práctica de salud femenina y alcanzar más clientas.',
+      'Potencia tus servicios de salud femenina con la plataforma tecnológica Eleva Care. Para clínicas, empresas y organizaciones sanitarias.',
     siteName: 'Eleva Care',
   },
 };
@@ -23,14 +23,14 @@ import WhoCanJoinSection from '@/components/sections/become-partner/WhoCanJoinSe
 
 <HeroSection
   badge={{
-    text: 'Para Empresas de Salud',
+    text: 'Para Clínicas, Empresas y Organizaciones',
     icon: <Sparkles className="mr-2 inline h-4 w-4" />,
   }}
-  title="Escala Tu Práctica con"
+  title="Potencia Tus Servicios con"
   subtitle="Tecnología Eleva Care"
-  description="Únete a nuestra red de partners para expandir tus servicios de salud femenina. Accede a tecnología de plataforma de vanguardia, amplía tu equipo de expertas y alcanza más clientas manteniendo tu identidad de marca independiente."
+  description="Utiliza la plataforma tecnológica de Eleva Care para ofrecer servicios digitales de salud femenina a través de tu organización. Accede a nuestra red de especialistas independientes, o integra tu propio equipo—todo impulsado por nuestra infraestructura segura y probada."
   cta={{
-    text: 'Conviértete en Partner',
+    text: 'Colaborar con Nosotros',
     href: '/contact?partner=true',
     icon: <ArrowRight className="ml-2 h-5 w-5" />,
   }}
@@ -38,54 +38,54 @@ import WhoCanJoinSection from '@/components/sections/become-partner/WhoCanJoinSe
     text: 'Programar una Demo',
     href: '/contact?demo=true',
   }}
-  features="Confiado por centros de bienestar, prácticas de salud y organizaciones de coaching en el sector de salud femenina."
+  features="Clínicas, centros de bienestar, empresas y organizaciones sanitarias confían en nosotros para potenciar sus servicios digitales de salud femenina."
 />
 
 <BenefitsSection
-  title="¿Por Qué Asociarse con Eleva Care?"
+  title="Por Qué las Organizaciones Eligen Eleva Care"
   benefits={[
     {
-      icon: 'building',
-      title: 'Expande Tu Alcance',
+      icon: 'zap',
+      title: 'Tecnología Lista para Usar',
       description:
-        'Accede a una red creciente de clientas que buscan activamente servicios de salud femenina. Aumenta la visibilidad y las reservas de tu práctica.',
+        'Salta la fase de desarrollo. Nuestra plataforma probada incluye agenda, videoconsultas seguras, pagos y gestión de clientes—lista para tu organización.',
     },
     {
       icon: 'users',
-      title: 'Construye Tu Equipo de Expertas',
+      title: 'Accede a Nuestra Red de Especialistas',
       description:
-        'Atrae e incorpora profesionales de la salud cualificadas. Gestiona tu equipo sin problemas a través de nuestra plataforma.',
+        'Ofrece a tus clientes acceso a nuestra red de profesionales de la salud independientes y licenciados, o integra tu propio equipo en la plataforma.',
     },
     {
-      icon: 'zap',
-      title: 'Plataforma Tecnológica',
+      icon: 'building',
+      title: 'Mantén Tu Marca',
       description:
-        'Herramientas completas de gestión de práctica: programación, consultas por video, pagos y comunicaciones con clientas, todo en un solo lugar.',
+        'Opciones de marca blanca te permiten ofrecer servicios impulsados por Eleva Care bajo la marca de tu organización. Tus clientes, tus relaciones.',
     },
     {
       icon: 'dollar',
-      title: 'Crecimiento de Ingresos',
+      title: 'Modelo de Negocio Flexible',
       description:
-        'Modelo de ingresos transparente con suscripciones de espacio de trabajo y estructura de comisiones justa. Mantén tu identidad de marca y relaciones con clientas.',
+        'Suscripciones de espacio de trabajo con precios transparentes. Escala hacia arriba o abajo según las necesidades de tu organización.',
     },
     {
       icon: 'chart',
-      title: 'Análisis e Insights',
+      title: 'Analíticas Empresariales',
       description:
-        'Rastrea el rendimiento, las reservas y los ingresos con paneles completos. Toma decisiones basadas en datos para tu práctica.',
+        'Rastrea utilización, resultados y ROI con paneles completos. Toma decisiones basadas en datos para tus programas de salud.',
     },
     {
       icon: 'headphones',
-      title: 'Soporte Dedicado',
+      title: 'Soporte Dedicado para Partners',
       description:
-        'Asistencia en la incorporación, soporte técnico y gestión continua de la asociación para garantizar tu éxito.',
+        'Asistencia en incorporación, soporte técnico y un gestor de cuenta dedicado para garantizar tu éxito.',
     },
   ]}
 />
 
 <WhoCanJoinSection
-  title="¿Quién Puede Convertirse en Partner?"
-  subtitle="Eleva Care da la bienvenida a todos los tipos de organizaciones de salud femenina comprometidas con la atención de calidad y nuestra misión compartida."
+  title="¿Quién Usa Eleva Care para Organizaciones?"
+  subtitle="Clínicas, empresas y organizaciones sanitarias usan nuestra plataforma tecnológica para potenciar sus servicios de salud femenina."
   partnerTypes={[
     {
       icon: 'stethoscope',
@@ -233,16 +233,16 @@ import WhoCanJoinSection from '@/components/sections/become-partner/WhoCanJoinSe
 />
 
 <FinalCTASection
-  title="¿Lista para Hacer Crecer Tu Práctica?"
-  description="Únete a la red de partners de Eleva Care y forma parte de un movimiento para transformar la atención sanitaria de las mujeres. Juntas, ayudaremos a más mujeres a acceder a la atención de calidad que merecen."
+  title="¿Lista para Potenciar tu Organización con Eleva Care?"
+  description="Únete a las organizaciones que ya usan la tecnología Eleva Care para ofrecer servicios digitales de salud femenina. Nuestra plataforma, tu marca, mejores resultados para tus clientes."
   cta={{
-    text: 'Solicita Convertirte en Partner',
+    text: 'Comenzar',
     href: '/contact?partner=true',
     icon: <ArrowRight className="ml-2 h-5 w-5" />,
   }}
   support={{
-    text: '¿Tienes preguntas sobre la asociación?',
-    linkText: 'Programa una llamada con nuestro equipo.',
+    text: '¿Quieres ver cómo funciona?',
+    linkText: 'Programa una demo con nuestro equipo.',
     linkHref: '/contact?demo=true',
   }}
 />
