--- a/src/content/become-expert/pt.mdx
+++ b/src/content/become-expert/pt.mdx
@@ -1,9 +1,9 @@
 export const metadata = {
-  title: "Torne-se um Especialista | Partilhe o Seu Conhecimento | Eleva Care",
-  description: "Junte-se à nossa comunidade de profissionais de saúde, coaches e consultores. Defina as suas próprias tarifas, gira o seu horário e ajude as pessoas a alcançar os seus objetivos.",
+  title: "Junte-se como Especialista | Eleva Care",
+  description: "Junte-se à Eleva Care como profissional de saúde independente. Defina as suas próprias tarifas, gira a sua agenda e preste cuidados através da nossa plataforma segura.",
   og: {
-    title: "Torne-se um Especialista | Partilhe o Seu Conhecimento | Eleva Care",
-    description: "Junte-se à nossa comunidade de profissionais de saúde, coaches e consultores. Defina as suas próprias tarifas e ganhe no seu horário.",
+    title: "Junte-se como Especialista | Eleva Care",
+    description: "Junte-se à Eleva Care como profissional de saúde independente e licenciado. Defina as suas tarifas e preste cuidados através da nossa plataforma segura.",
     siteName: "Eleva Care"
   }
 };
@@ -17,22 +17,27 @@ import FinalCTASection from '@/components/sections/become-expert/FinalCTASection
 import { Sparkles, TrendingUp } from 'lucide-react';
 
 <HeroSection
-  badge="Junte-se à Nossa Rede de Especialistas"
-  title="Partilhe a Sua Experiência,"
-  subtitle="Ganhe nos Seus Termos"
-  description="Ajude as pessoas a alcançar os seus objetivos de saúde e bem-estar enquanto constrói uma prática flexível. Defina o seu próprio horário, tarifas e trabalhe de qualquer lugar."
+  badge="Para Profissionais de Saúde Independentes"
+  title="Preste Cuidados,"
+  subtitle="Nos Seus Termos"
+  description="Junte-se à Eleva Care como profissional de saúde independente e licenciado. Mantém total autonomia clínica enquanto nós fornecemos a plataforma tecnológica segura—agenda, videoconsultas, pagamentos e gestão de clientes."
   ctaButton="Começar"
   signInButton="Iniciar Sessão"
-  features="✓ Sem custos iniciais  ✓ Mantenha 80% dos ganhos  ✓ Apoio profissional"
+  features="✓ Total independência  ✓ Mantenha 80% dos ganhos  ✓ Plataforma segura e conforme com RGPD"
 />
 
 <BenefitsSection
   title="Porquê Juntar-se à Eleva Care?"
   benefits={[
     {
+      icon: 'shield',
+      title: 'Total Independência Clínica',
+      description: 'É um profissional independente com total autonomia clínica. Decide como cuidar dos seus clientes—a Eleva.care apenas fornece a plataforma tecnológica.',
+    },
+    {
       icon: 'dollar',
       title: 'Defina as Suas Próprias Tarifas',
-      description: 'Você decide quanto vale o seu tempo. Mantenha 80% dos seus ganhos e receba pagamentos semanais.',
+      description: 'Você decide quanto vale o seu tempo. Mantenha 80% dos seus ganhos e receba pagamentos semanais através de processamento seguro.',
     },
     {
       icon: 'calendar',
@@ -40,24 +45,19 @@ import { Sparkles, TrendingUp } from 'lucide-react';
       description: 'Controle completamente o seu calendário. Trabalhe tanto ou tão pouco quanto quiser, quando quiser.',
     },
     {
-      icon: 'users',
-      title: 'Clientes de Qualidade',
-      description: 'Conecte-se com clientes motivados que levam a sério a sua jornada de saúde e bem-estar.',
-    },
-    {
       icon: 'video',
-      title: 'Sessões Virtuais',
-      description: 'Realize sessões de qualquer lugar. Tudo o que precisa é de um computador e ligação à internet.',
+      title: 'Videoconsultas Seguras',
+      description: 'Realize sessões de qualquer lugar na nossa plataforma encriptada e conforme com RGPD. Tudo o que precisa é de um computador e ligação à internet.',
     },
     {
-      icon: 'shield',
-      title: 'Pagamentos Seguros',
-      description: 'Faturação automática e processamento seguro de pagamentos. Sem perseguir pagamentos ou burocracias.',
+      icon: 'users',
+      title: 'Alcance Mais Clientes',
+      description: 'Seja descoberto por clientes que procuram serviços de saúde feminina através da nossa plataforma. Concentre-se nos cuidados, não em marketing.',
     },
     {
       icon: 'trending',
-      title: 'Apoio em Marketing',
-      description: 'Seja descoberto por novos clientes através da nossa plataforma. Concentre-se na sua experiência, não em marketing.',
+      title: 'Ferramentas Profissionais',
+      description: 'Gestão de clientes, faturação automática, páginas de reserva e análises—tudo o que precisa para gerir a sua prática independente.',
     },
   ]}
 />
@@ -241,35 +241,35 @@ import { Sparkles, TrendingUp } from 'lucide-react';
 
 
 <RequirementsSection
-  title="O Que Precisa"
+  title="Requisitos para Aderir"
   requirements={[
     {
       icon: 'badge',
-      title: 'Credenciais Profissionais',
-      description: 'Licença ou certificação válida na sua área (saúde, coaching, consultoria, etc.)',
+      title: 'Licença Profissional Válida',
+      description: 'Licença ou certificação ativa na sua área de saúde. Autocertifica as suas credenciais e é responsável pelo seu estatuto profissional.',
+    },
+    {
+      icon: 'shield',
+      title: 'Seguro de Responsabilidade Profissional',
+      description: 'Cobertura de responsabilidade civil profissional ou negligência médica adequada à sua área de prática.',
     },
     {
       icon: 'globe',
-      title: 'Internet Confiável',
-      description: 'Ligação à internet estável para sessões virtuais e comunicação na plataforma',
-    },
-    {
-      icon: 'message',
-      title: 'Capacidades de Comunicação',
-      description: 'Capacidade de se conectar com clientes de forma profissional e compassiva',
+      title: 'Internet e Equipamento Fiável',
+      description: 'Ligação à internet estável e ambiente adequado para videoconsultas profissionais.',
     },
     {
       icon: 'heart',
-      title: 'Paixão por Ajudar',
-      description: 'Desejo genuíno de ajudar as pessoas a melhorar a sua saúde e bem-estar',
+      title: 'Compromisso com a Qualidade',
+      description: 'Dedicação a práticas baseadas em evidência e a prestar cuidados de excelência aos seus clientes.',
     },
   ]}
 />
 
 <FinalCTASection
-  title="Pronto para Fazer a Diferença?"
-  description="Junte-se a centenas de especialistas que já estão a ajudar clientes a alcançar os seus objetivos na Eleva Care. Comece a construir a sua prática flexível hoje."
-  button="Criar Perfil de Especialista"
+  title="Pronto para Juntar-se como Especialista Independente?"
+  description="Junte-se à nossa rede de profissionais de saúde independentes e licenciados. Você presta os cuidados; nós fornecemos a plataforma tecnológica segura para apoiar a sua prática."
+  button="Criar o Seu Perfil de Especialista"
   questions="Tem perguntas?"
   contact="Contacte-nos"
 />
