--- a/src/content/become-partner/pt-BR.mdx
+++ b/src/content/become-partner/pt-BR.mdx
@@ -1,11 +1,11 @@
 export const metadata = {
-  title: 'Torne-se um Partner | Expanda Sua Prática | Eleva Care',
+  title: 'Para Organizações | Tecnologia Eleva Care para Sua Empresa',
   description:
-    'Faça parceria com a Eleva Care para expandir sua prática de saúde feminina. Acesse nossa plataforma tecnológica, amplie sua rede de especialistas e alcance mais clientes mantendo sua marca independente.',
+    'Potencialize seus serviços de saúde feminina com a tecnologia Eleva Care. Clínicas, empresas e organizações de saúde usam nossa plataforma para prestar cuidados digitais, acessar nossa rede de especialistas e escalar seus serviços.',
   og: {
-    title: 'Torne-se um Partner | Expanda Sua Prática | Eleva Care',
+    title: 'Para Organizações | Tecnologia Eleva Care para Sua Empresa',
     description:
-      'Faça parceria com a Eleva Care para expandir sua prática de saúde feminina e alcançar mais clientes.',
+      'Potencialize seus serviços de saúde feminina com a plataforma tecnológica Eleva Care. Para clínicas, empresas e organizações de saúde.',
     siteName: 'Eleva Care',
   },
 };
@@ -23,14 +23,14 @@ import WhoCanJoinSection from '@/components/sections/become-partner/WhoCanJoinSe
 
 <HeroSection
   badge={{
-    text: 'Para Empresas de Saúde',
+    text: 'Para Clínicas, Empresas e Organizações',
     icon: <Sparkles className="mr-2 inline h-4 w-4" />,
   }}
-  title="Dimensione Sua Prática com"
+  title="Potencialize Seus Serviços com"
   subtitle="Tecnologia Eleva Care"
-  description="Junte-se à nossa rede de parceiros para expandir seus serviços de saúde feminina. Acesse tecnologia de plataforma de ponta, amplie sua equipa de especialistas e alcance mais clientes mantendo sua identidade de marca independente."
+  description="Utilize a plataforma tecnológica da Eleva Care para prestar serviços digitais de saúde feminina através da sua organização. Acesse nossa rede de especialistas independentes, ou integre sua própria equipe—tudo apoiado por nossa infraestrutura segura e comprovada."
   cta={{
-    text: 'Tornar-se Partner',
+    text: 'Colaborar Conosco',
     href: '/contact?partner=true',
     icon: <ArrowRight className="ml-2 h-5 w-5" />,
   }}
@@ -38,54 +38,54 @@ import WhoCanJoinSection from '@/components/sections/become-partner/WhoCanJoinSe
     text: 'Agendar uma Demo',
     href: '/contact?demo=true',
   }}
-  features="Confiado por centros de bem-estar, práticas de saúde e organizações de coaching no setor de saúde feminina."
+  features="Clínicas, centros de bem-estar, empresas e organizações de saúde confiam em nós para potencializar seus serviços digitais de saúde feminina."
 />
 
 <BenefitsSection
-  title="Por Que Fazer Parceria com a Eleva Care?"
+  title="Por Que as Organizações Escolhem a Eleva Care"
   benefits={[
     {
-      icon: 'building',
-      title: 'Expanda Seu Alcance',
+      icon: 'zap',
+      title: 'Tecnologia Pronta para Usar',
       description:
-        'Acesse uma rede crescente de clientes que procuram ativamente serviços de saúde feminina. Aumente a visibilidade e as reservas da sua prática.',
+        'Pule a fase de desenvolvimento. Nossa plataforma comprovada inclui agenda, videoconsultas seguras, pagamentos e gestão de clientes—pronta para sua organização.',
     },
     {
       icon: 'users',
-      title: 'Construa Sua Equipa de Especialistas',
+      title: 'Acesse Nossa Rede de Especialistas',
       description:
-        'Atraia e integre profissionais de saúde qualificados. Gerencie sua equipa perfeitamente através da nossa plataforma.',
+        'Ofereça aos seus clientes acesso à nossa rede de profissionais de saúde independentes e licenciados, ou integre sua própria equipe na plataforma.',
     },
     {
-      icon: 'zap',
-      title: 'Plataforma Tecnológica',
+      icon: 'building',
+      title: 'Mantenha Sua Marca',
       description:
-        'Ferramentas completas de gestão de prática: agendamento, consultas por vídeo, pagamentos e comunicações com clientes, tudo num só lugar.',
+        'Opções de marca branca permitem oferecer serviços potencializados pela Eleva Care sob a marca da sua organização. Seus clientes, seus relacionamentos.',
     },
     {
       icon: 'dollar',
-      title: 'Crescimento de Receitas',
+      title: 'Modelo de Negócio Flexível',
       description:
-        'Modelo de receitas transparente com subscrições de espaço de trabalho e estrutura de comissões justa. Mantenha sua identidade de marca e relacionamentos com clientes.',
+        'Assinaturas de espaço de trabalho com preços transparentes. Escale para cima ou para baixo conforme as necessidades da sua organização.',
     },
     {
       icon: 'chart',
-      title: 'Análises e Insights',
+      title: 'Analytics Empresariais',
       description:
-        'Acompanhe o desempenho, reservas e receitas com painéis abrangentes. Tome decisões baseadas em dados para sua prática.',
+        'Acompanhe utilização, resultados e ROI com dashboards completos. Tome decisões baseadas em dados para seus programas de saúde.',
     },
     {
       icon: 'headphones',
-      title: 'Suporte Dedicado',
+      title: 'Suporte Dedicado para Partners',
       description:
-        'Assistência na integração, suporte técnico e gestão contínua da parceria para garantir seu sucesso.',
+        'Assistência na integração, suporte técnico e um gerente de conta dedicado para garantir seu sucesso.',
     },
   ]}
 />
 
 <WhoCanJoinSection
-  title="Quem Pode Tornar-se Partner?"
-  subtitle="A Eleva Care dá as boas-vindas a todos os tipos de organizações de saúde feminina comprometidas com cuidados de qualidade e nossa missão partilhada."
+  title="Quem Usa a Eleva Care para Organizações?"
+  subtitle="Clínicas, empresas e organizações de saúde usam nossa plataforma tecnológica para potencializar seus serviços de saúde feminina."
   partnerTypes={[
     {
       icon: 'stethoscope',
@@ -233,16 +233,16 @@ import WhoCanJoinSection from '@/components/sections/become-partner/WhoCanJoinSe
 />
 
 <FinalCTASection
-  title="Pronta para Expandir Sua Prática?"
-  description="Junte-se à rede de parceiros da Eleva Care e faça parte de um movimento para transformar os cuidados de saúde das mulheres. Juntos, ajudaremos mais mulheres a aceder aos cuidados de qualidade que merecem."
+  title="Pronta para Potencializar Sua Organização com a Eleva Care?"
+  description="Junte-se às organizações que já usam a tecnologia Eleva Care para prestar serviços digitais de saúde feminina. Nossa plataforma, sua marca, melhores resultados para seus clientes."
   cta={{
-    text: 'Candidatar-se a Tornar-se Partner',
+    text: 'Começar',
     href: '/contact?partner=true',
     icon: <ArrowRight className="ml-2 h-5 w-5" />,
   }}
   support={{
-    text: 'Tem questões sobre a parceria?',
-    linkText: 'Agende uma chamada com nossa equipa.',
+    text: 'Quer ver como funciona?',
+    linkText: 'Agende uma demo com nossa equipe.',
     linkHref: '/contact?demo=true',
   }}
 />
